<resources>
    <string name="app_name">Clown</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="add_image">Add Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="online">Online</string>
    <string name="mobile">Mobile</string>
    <string name="image_content_description_hint">Image</string>
    <string name="group_name">Group Name</string>

    <!--Main Activity-->
    <string name="new_group_opt">New Group</string>
    <string name="features_opt">Features</string>
    <string name="invite_friends_opt">Invite Friends</string>
    <string name="calls_opt">Calls</string>

    <!--Sign In Activity-->
    <string name="by_order_of_the_peaky_blinder">By order of the peaky blinder</string>
    <string name="login_to_continue_hint">Login to continue</string>
    <string name="phone_number_or_email_hint">Phone Number or Email</string>
    <string name="password_hint">Password</string>
    <string name="forget_password_option">Forget Password?</string>
    <string name="create_new_account_option">Create New Account</string>
    <string name="sign_in_button">Sign In</string>

    <!--Sign Up Activity-->
    <string name="missing_sms_code">Haven\'t seen your SMS code?</string>
    <string name="verification_code_hint">Your verification code</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="submit_button">Submit</string>

    <!--Contacts Activity-->
    <string name="title_contacts">Contacts</string>
    <string name="tab_item_friends_title">Friends</string>
    <string name="tab_item_phone_contacts_title">Phone Contacts</string>
    <string name="tab_item_pending_requests_title">Pending Requests</string>
    <string name="fragment_friends_title">Friends</string>
    <string name="fragment_pending_requests_title">Pending Requests</string>
    <string name="fragment_phone_contacts_title">Phone Contacts</string>

    <!--Friend List Item-->
    <string name="username_hint">Username</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="status_online">Online</string>
    <string name="status_offline">Offline</string>
    <string name="search_hint">Enter a phone number</string>

    <!--User Profile Item-->
    <string name="account_section">Account</string>
    <string name="personal_section">Personal</string>
    <string name="settings_section">Settings</string>
    <string name="email_hint">Email</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="gender_hint">Gender</string>
    <string name="bio_hint_1">Bio</string>
    <string name="bio_hint_2">Say somethings about yourself</string>
    <string name="notifications_and_sounds">Notifications and Sounds</string>
    <string name="conversation">Conversation</string>
    <string name="block_messages">Block Messages</string>
    <string name="unfriend">Un-friend</string>

    <!--Suggested User Item-->
    <string name="add">Add</string>
    <string name="request_sent">Request Sent</string>
    <string name="already_friend">Already Friend</string>
    <string name="add_friend">Add Friend</string>

    <!--Pending Request Item-->
    <string name="friend_accept">Accept</string>
    <string name="friend_decline">Decline</string>
    <string name="mutual_friends">Mutual Friends</string>

    <!--Notification Layouts-->
    <string name="new_friend_request_title">New friend request!</string>
    <string name="new_friend_request_content">You\'\ve received a friend request from </string>
</resources>