<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:id="@+id/signUpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/create_new_account_option"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/default_avatar"
                android:scaleType="centerCrop"
                app:riv_oval="true" />


        </FrameLayout>

        <!-- Verification layout-->
        <LinearLayout
            android:id="@+id/userInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/background_input"
                android:hint="@string/username_hint"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />

            <EditText
                android:id="@+id/inputPhoneNumb"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/background_input"
                android:hint="@string/phone_number_hint"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/background_input"
                android:hint="@string/email_hint"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/background_input"
                android:hint="@string/password_hint"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />

            <EditText
                android:id="@+id/inputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/background_input"
                android:hint="@string/confirm_password_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_8sdp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="visible" />
            </FrameLayout>


            <TextView
                android:id="@+id/textSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:text="@string/sign_in_button"
                android:textColor="@color/primary"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Verification layout-->
        <LinearLayout
            android:id="@+id/verificationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/verificationCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/background_input"
                android:hint="@string/verification_code_hint"

                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp" />



            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/confirm_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:text="@string/submit_button"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_8sdp" />

                <ProgressBar
                    android:id="@+id/progressBarWhileVerifying"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="visible" />
            </FrameLayout>

            <TextView
                android:id="@+id/resendContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>