<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_user_option"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/rivAvatar"
        android:src="@drawable/default_avatar"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_6sdp"
        android:scaleType="centerCrop"
        app:riv_oval="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvUsername"
        android:maxLines="1"
        android:ellipsize="end"
        android:hint="@string/username_hint"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_15ssp"
        android:maxWidth="@dimen/_150sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/rivAvatar"/>
    
    <TextView
        android:id="@+id/tvRequestSent"
        android:text="@string/request_sent"
        android:textStyle="bold|italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_6sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    
    <Button
        android:id="@+id/btnAddFriend"
        android:text="@string/add"
        android:textSize="@dimen/_10ssp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_6sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>