<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/rivAvatar"
        android:src="@drawable/default_avatar"
        android:scaleType="centerCrop"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:riv_oval="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvUsername"
        android:maxLines="1"
        android:ellipsize="end"
        android:hint="@string/username_hint"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_15ssp"
        android:maxWidth="@dimen/_150sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvPhoneNumber"
        app:layout_constraintLeft_toRightOf="@id/rivAvatar"/>

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:ellipsize="end"
        android:hint="@string/phone_number_hint"
        android:maxWidth="@dimen/_150sdp"
        android:maxLines="1"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/rivAvatar"
        app:layout_constraintTop_toBottomOf="@id/tvUsername"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/ivStatus"
        android:layout_width="@dimen/_10sdp"
        android:layout_height="@dimen/_10sdp"
        android:contentDescription="@string/status_online"
        android:src="@drawable/ic_online_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tvStatus"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/status_online"
        android:textColorHint="@color/status_online"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>
